# TEG-project

./: .env.example  .gitignore  README.md  docker-compose.yml  log_manager.py  main.py  pyproject.toml  shared_logging.py
ai/: .env.example  Dockerfile  app.py  pyproject.toml
ai/config/: .env.example  __init__.py  ai_config.json  config_manager.py
ai/config/logging/: __init__.py
ai/src/: dynamic_rag_graph.py  openai_service.py
ai/src/agents/: SQLQueryEvaluatorAgent.py  SQL_Agent.py  basic_agent.py  table_structures.py
ai/src/graphs/: dynamic_rag_graph.py
ai/src/rag/: advanced_rag_config.py  basic_rag.py
ai/src/rags/: advanced_rag_config.py  basic_rag.py
ai/src/tools/: supabase_tools.py
backend/: Dockerfile  app.py  pyproject.toml
backend/config/: .env.example  __init__.py  backend_config.json  config_manager.py
backend/config/logging/: simple_logging.py
backend/src/: call_ai_service.py  database.py  openai_service.py  supabase_tools.py
config/: .env.example  __init__.py  config_manager.py  project_config.json
config/logging/: __init__.py  log_manager.py  shared_logging.py  simple_logging.py
frontend/: .env.example  Dockerfile  app.py  pyproject.toml
frontend/config/: __init__.py  config_manager.py  frontend_config.json
frontend/config/logging/: __init__.py
frontend/src/: api_client.py  logging_utils.py  session_state.py  settings.py  streamlit_config.py  ui_components.py
frontend/src/config/logging/: simple_logging.py
