[project]
name = "ai"
version = "0.1.0"
description = "AI service handling LangChain operations and LLM integration for TEG project"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.3",
]
