[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.3.18",
    "supabase>=2.15.2",
]
